resources/public/application.css
.cf:before, .cf:after {
  display: table;
  content: " ";
}

.cf:after {
  clear: both;
}

.cf {
*zoom: 1;
}

* {
  box-sizing: border-box;
}

html {

}

@media (min-width: 0px) {

  html {
    font-size: 30.00%;
  }

}

@media (min-width: 320px) {

  html {
    font-size: 40.00%;
  }

}

@media (min-width: 768px) {

  html {
    font-size: 50.06%;
  }

}

@media (min-width: 1024px) {

  html {
    font-size: 58.74%;
  }

}

@media (min-width: 1200px) {

  html {
    font-size: 62.50%;
  }

}

@media (min-width: 1600px) {

  html {
    font-size: 83.03%;
  }

}

body {
  font-size: 1.6rem;
  font-family: 'Droid Sans', sans-serif;
}

.omingard-wrapper {
  outline: 0;
}

.black {
  color: black;
}

.red {
  color: red;
}

.l-navigation-container {
  height: 4.5rem;
  padding: 0.8rem 1rem 0.8rem;
  background: black;
  width: 100%;
}

.m-navigation {
  margin: 0 auto;
  padding: 0;
  list-style: none;
  color: #eee;
}

@media (min-width: 1000px) {

  .m-navigation {
    width: 1000px;
  }

}

.m-navigation--item {
  margin-right: 2rem;
  float: left;
}

.m-navigation--item.as-right {
  float: right;
}

.m-navigation--item a {
  text-decoration: none;
  color: white;
}

.m-navigation--title {
  margin: 0;
  font-size: 2rem;
}

.m-navigation--undo {
  border-radius: 3px;
  border: 1px solid #444;
  background: #444;
}

.m-navigation--hit-me {
  border: 1px solid #234892;
  border-radius: 3px;
  background: #234892;
}

.l-game-container {
  margin: 0 auto;
  user-select: none;
  -khtml-user-select: none;
  -webkit-touch-callout: none;
  width: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
}

@media (min-width: 1000px) {

  .l-game-container {
    width: 1000px;
  }

}

.m-columns-wrapper {
  margin: 2rem auto 0;
}

.m-columns {
  margin: 0;
  padding: 0;
}

.m-column-wrapper {
  margin-right: 1%;
  width: 10%;
  float: left;
}

.m-column {
  padding: 0;
  list-style: none;
}

.m-column--placeholder {
  margin: 2px auto;
  height: 25px;
  border-radius: 3px;
  border: 1px dashed #ddd;
  background-color: #fafafa;
  font-size: 13px;
  text-align: center;
  color: #999;
  line-height: 2rem;
}

.m-card {
  border: 1px solid #bbb;
  height: 25px;
  border-radius: 3px;
  text-align: center;
  padding: 5px;
  margin: 2px 0;
  line-height: 1rem;
  background: #ddd;
}

.m-card.as-open {
  cursor: pointer;
  background-color: #fafafa;
}

.m-card.as-moving {
  background-color: rgba(255, 255, 0, 0.5);
}

.m-card.is-moveable {
  border: 1px solid rgba(0, 200, 0, 0.5);
  box-shadow: 0px 0px 3px rgba(0, 200, 0, 1);
}

.m-card.as-closed {
  background-position: center 72px;
  background-image: url(card_back.png);
  background-color: #444;
}

.m-card_small {
  border-radius: 3px;
  border: 1px solid #bbb;
  padding: 0 3px;
  background: #fafafa;
}

.l-piles-container {
  user-select: none;
  -khtml-user-select: none;
  position: fixed;
  -webkit-touch-callout: none;
  width: 1000px;
  -webkit-user-select: none;
  -moz-user-select: none;
  bottom: 0;
  -ms-user-select: none;
}

.l-piles-container--headline {
  margin: 0;
  float: left;
}

.l-piles-container--note {
  color: #555;
  margin-left: 1rem;
  font-weight: normal;
  font-size: 1.2rem;
}

.m-piles {
  float: left;
  list-style-type: none;
  padding: 0px;
}

.m-pile {
  width: 10%;
  margin-right: 1rem;
  float: left;
}

.m-pile--placeholder {
  margin: 2px 0;
  height: 25px;
  border-radius: 3px;
  border: 1px solid #bbb;
  padding: 5px;
  cursor: pointer;
  background: #fafafa;
  text-align: center;
  line-height: 1rem;
}

.m-pile--placeholder.red {
  color: rgba(255, 0, 0, 0.5);
}

.m-pile--placeholder.black {
  color: rgba(0, 0, 0, 0.5);
}

.l-piles-container--new-cards {
  border: 1px solid #234892;
  border-radius: 3px;
  background: #234892;
  padding: 10px;
  color: white;
  float: left;
}

.l-howto {
  width: 600px;
  top: 50%;
  height: 280px;
  margin: -140px 0 0 -300px;
  padding: 20px;
  position: fixed;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
  border-radius: 3px;
  display: none;
  background: #ccc;
  color: #333;
  left: 50%;
}

.l-howto.is-visible {
  display: block;
}

